--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -7,8 +7,9 @@
 @import '_social'
 @import '_about'
 
-body, h1, h2, p, a
+html, body, h1, h2, p, a
   margin: 0
+  padding: 0
   font-family: bignoodletitlingregular
   color: white
   text-decoration: none
